target/kubernetes/openshift.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2020-11-27 - 11:53:55 +0000"
    app.openshift.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
    app.quarkus.io/commit-id: "8b8951279905cf4f9ec96c2d21bbf03a44d1a2cf"
    app.quarkus.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
  labels:
    app.kubernetes.io/name: "people"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app.openshift.io/runtime: "quarkus"
  name: "people"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "people"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  type: "ClusterIP"
---
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2020-11-27 - 11:53:55 +0000"
    app.openshift.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
    app.quarkus.io/commit-id: "8b8951279905cf4f9ec96c2d21bbf03a44d1a2cf"
    app.quarkus.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
  labels:
    app.kubernetes.io/name: "people"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app.openshift.io/runtime: "quarkus"
  name: "people"
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: "people"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: "2020-11-27 - 11:53:55 +0000"
        app.openshift.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
        app.quarkus.io/commit-id: "8b8951279905cf4f9ec96c2d21bbf03a44d1a2cf"
        app.quarkus.io/vcs-url: "https://github.com/openshift-katacoda/rhoar-getting-started.git"
      labels:
        app.kubernetes.io/name: "people"
        app.kubernetes.io/version: "1.0-SNAPSHOT"
        app.openshift.io/runtime: "quarkus"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        - name: "JAVA_APP_JAR"
          value: "/deployments/people-1.0-SNAPSHOT-runner.jar"
        - name: "JAVA_LIB_DIR"
          value: "/deployments/lib"
        - name: "JAVA_CLASSPATH"
          value: "/deployments/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/lib/io.smallrye.config.smallrye-config-common-1.7.0.jar:/deployments/lib/io.smallrye.config.smallrye-config-1.7.0.jar:/deployments/lib/org.jboss.logging.jboss-logging-3.3.2.Final.jar:/deployments/lib/org.jboss.logmanager.jboss-logmanager-embedded-1.0.4.jar:/deployments/lib/org.jboss.logging.jboss-logging-annotations-2.1.0.Final.jar:/deployments/lib/org.jboss.threads.jboss-threads-3.0.1.Final.jar:/deployment [...]
        - name: "JAVA_OPTIONS"
          value: "-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
        image: "Somnath_Banerjee/people:1.0-SNAPSHOT"
        imagePullPolicy: "Always"
        name: "people"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
      serviceAccount: "people"
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - "people"
      from:
        kind: "ImageStreamTag"
        name: "people:1.0-SNAPSHOT"
    type: "ImageChange"
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  labels:
    app.kubernetes.io/name: "people"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  name: "people"
spec:
  host: ""
  path: "/"
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: "people"
